--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,26 +1,205 @@
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@400;700;900&display=swap");
 * {
   top: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-nav {
+/* Color Varibles */
+/* Font Styles */
+body {
+  font-family: "Raleway", sans-serif;
+}
+
+header {
+  background-color: #001021;
+  padding: 15px;
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-transform: uppercase;
-  text-decoration: none;
 }
 
-.nav-menu {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+header a:visited, header a:link {
+  text-decoration: none;
+  color: white;
+}
+
+header #logo {
+  font-weight: 900;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header #navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  list-style-type: none;
+  margin-right: 15px;
+}
+
+header #navbar .nav-links {
+  display: inline-block;
+  padding-right: 20px;
+}
+
+main #hero-section {
+  background-color: #022F2F;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#001021), to(#022F2F));
+  background-image: linear-gradient(#001021, #022F2F);
+  height: 1100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main #hero-header-text {
+  font-family: "Monoton", cursive;
+  font-size: 80px;
+  color: white;
+  letter-spacing: 6%;
+  text-transform: uppercase;
+}
+
+main #hero-buttons {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+}
+
+main .hero-btn {
+  border: #034748 solid 5px;
+  padding: 20px 70px;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+main #About {
+  background-color: #022F2F;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#022F2F), to(#034748));
+  background-image: linear-gradient(#022F2F, #034748);
+  height: 1000px;
+  padding: 50px 100px;
+}
+
+main #About .section-header {
+  font-family: "Monoton", cursive;
+  text-align: center;
+  font-size: 250x;
+  -webkit-text-decoration: underline  5px white;
+          text-decoration: underline  5px white;
+  text-transform: uppercase;
+  text-underline-offset: 10px;
+  color: white;
+  margin-bottom: 100px;
+}
+
+main #About #about-section-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main #About .about-card {
+  display: -ms-grid;
+  display: grid;
+  grid-area: 1fr 1fr 1fr;
+  text-align: center;
+  background-color: #001021;
+  height: 300px;
+  width: 100%;
+  margin-right: 150px;
+  color: white;
+  font-size: 16px;
+  text-transform: uppercase;
+  border-radius: 10px;
+}
+
+main #About .about-card-title {
+  font-weight: bold;
+  background-color: #034748;
+  padding: 20px;
+  border-radius: 0px 0px 10px 10px;
+}
+
+main #About .about-card-text {
+  padding: 50px;
+}
+
+main .about-card-full {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  background-color: #001021;
+  height: 200px;
+  width: 100%;
+  margin-right: 150px;
+  color: white;
+  font-size: 16px;
+  text-transform: uppercase;
+  border-radius: 10px;
+}
+
+main .about-card-full-title {
+  margin-bottom: 10px;
+  font-weight: bold;
+  background-color: #034748;
+  padding: 25px;
+  border-radius: 0px 0px 10px 10px;
+}
+
+main .about-card-full-list {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 /*# sourceMappingURL=style.css.map */
