--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -69,6 +69,7 @@ header {
         color: white;
         letter-spacing: 6%;
         text-transform: uppercase;
+        margin-bottom: 50px;
     }
     #hero-buttons {
       display: grid;  
@@ -93,7 +94,7 @@ header {
         .section-header {
             font-family: $header-font;
             text-align: center;
-            font-size: 250x;
+            font-size: 40px;
             text-decoration: underline  5px white;
             text-transform: uppercase;
             text-underline-offset: 10px;
@@ -163,13 +164,13 @@ header {
 #Work {
         background-color: $secondary-color-green;
         background-image: linear-gradient($secondary-color-green-lightest, $secondary-color-green-light);
-        height: 1000px;
+        height: 1500px;
         padding: 50px 100px;
 
     .section-header {
         font-family: $header-font;
         text-align: center;
-        font-size: 250x;
+        font-size: 40px;
         text-decoration: underline  5px white;
         text-transform: uppercase;
         text-underline-offset: 10px;
@@ -181,24 +182,44 @@ header {
         color: white;
         text-transform: uppercase;
         border-radius: 10px 10px;
+        height: 310px;
+        width: auto;
+        overflow: hidden;
+       
     }
         .work-card-full-body {
-            padding: 20px;
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr;
+            grid-template-columns: 2fr 1fr;
+            grid-template-rows: 70px 85px 55px 60px 40px;
+            grid-column-gap: 0px;
+            grid-row-gap: 0px;
+           
 
         }
         .work-card-full-img {
-            height: 100%;
+            height: 20px;
+            width: auto;
+            grid-area: 2 / 2 / span 3 / 3;
+            order: 4;
         }
 
         .work-card-full-title {
             font-weight: bold;
-            font-size: 25px;
+            font-size: 35px;
+            grid-area: 1 / 1 / 2 / 2;
+            order: 1;
+            padding-left: 30px;
+            padding-top: 50px;
         }
         .work-card-full-desc {
-            font-size: 20px;
+            font-size: 25px;
+            grid-area: 2 / 1 / 3 / 2;
+            order: 2;
+            padding-left: 30px;
+            padding-top: 30px;
+            width: 800px;
+            line-height: 30px;
+            
         }
         .work-card-full-btn {
             font-weight: bold;
@@ -208,13 +229,145 @@ header {
             border-radius: 20px;
             background-color: $primary-color-blue-dark;
             color: white;
+            grid-area: 3 / 1 / 4 / 2;
+            order: 3;
+            width: 250px;
+            
         }
         .work-card-full-skills {
             list-style-type: none;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             background-color: $primary-color-blue-light;
             padding: 15px;
             font-style: italic;
+            margin: 0px;
+            grid-area: 5 / 1 / 6 / 3;
+            order: 5;
+            padding: 10px;
         }
+        .work-card-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            gap: 35px 100px;
+        }
+        .work-card {
+            background-color: $primary-color-blue;
+            height: 260px;
+            width: 100%;
+            color: white;
+            border-radius: 10px;
+            text-transform: uppercase;
+            overflow: hidden;
+        
+                .work-card-body {
+                    display: grid;
+                    grid-template-columns:  4fr 1fr;
+                    grid-template-rows: 30px 50px 60px;
+                    grid-column-gap: 0px;
+                    grid-row-gap: 0px;
+                    padding: 40px;
+                                        
+                }
+                .work-card-title {
+                    font-weight: bold;
+                    font-size: 20px;
+                    grid-area: 1 / 1 / 2 / 2;
+                    
+                }
+                .work-card-desc {
+                    font-size: 12px;
+                    width: 400px;
+                    grid-area: 2 / 1 / 3 / 2;
+
+                }
+                .work-card-button, .work-card-button a {
+                    font-weight: bold;
+                    border: none;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 20px;
+                    background-color: $primary-color-blue-dark;
+                    color: white;
+                    width: 250px;
+                    height: 50px;
+                    grid-area: 3 / 1 / 4 / 2;
+                    text-decoration: none;
+                    
+                }
+                .fa-desktop, .fa-pen, .fa-envelope,  {
+                    font-size: 80px;
+                    grid-area: 1 / 2 / 2 / 3;
+                    
+                }
+                .work-card-skills {
+                    list-style-type: none;
+                    display: flex;
+                    justify-content: space-around;
+                    background-color: $primary-color-blue-light;
+                    padding: 10px;
+                    margin: 0px;
+                    
+                }
+                    
+            }       
+
 }
+ #Contact {
+    background-color: $secondary-color-green;
+    background-image: linear-gradient($secondary-color-green-light, $primary-color-blue);
+    height: 700px;
+    padding: 50px 100px;
+
+    .section-header {
+        font-family: $header-font;
+        text-align: center;
+        font-size: 40px;
+        text-decoration: underline  5px white;
+        text-transform: uppercase;
+        text-underline-offset: 10px;
+        color: white;
+        margin-bottom: 100px;
+    } 
+    .contact-btn-list {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 400px;
+
+        .contact-btn {
+            padding: 25px;
+            margin: 10px;
+            display: grid;
+            grid-template-columns: 1fr 10fr;
+            justify-content: center;
+            text-transform: uppercase;
+            background-color: $secondary-color-green-lightest;
+            color: white;
+            font-size: 30px;
+            font-weight: bold;
+            text-align: center;
+            border-radius: 10px;
+            text-decoration: none;
+            border: none;
+            
+        } .fa-envelope-open-text, .fa-linkedin, .fa-github {
+            font-size: 40px;
+        }
+    }
+
+
+ }
+
+ #footer {
+     background-color: $primary-color-blue;
+     height: 150px;
+     color: white;
+     font-family: $header-font;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 30px;
+     text-align: center;
+ }
