--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,6 +6,10 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Color Varibles */
 /* Font Styles */
 body {
@@ -38,6 +42,7 @@ header #logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 1rem;
 }
 
 header #navbar {
@@ -50,9 +55,22 @@ header #navbar {
   margin-right: 15px;
 }
 
+@media only screen and (max-width: 500px) {
+  header #navbar {
+    font-size: 12px;
+    margin: 0px;
+  }
+}
+
 header #navbar .nav-links {
   display: inline-block;
   padding-right: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  header #navbar .nav-links {
+    padding: 0px;
+  }
 }
 
 #hero-section {
@@ -72,18 +90,37 @@ header #navbar .nav-links {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
+  text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
+@media only screen and (max-width: 800px) {
+  #hero-section {
+    height: 900px;
+  }
+}
+
 #hero-header-text {
-  font-family: "Monoton", cursive;
+  font-family: 'Monoton';
   font-size: 80px;
   color: white;
   letter-spacing: 6%;
   text-transform: uppercase;
   margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 900px) {
+  #hero-header-text {
+    font-size: 50px;
+  }
+}
+
+@media only screen and (max-width: 900px) and (max-width: 400px) {
+  #hero-header-text {
+    font-size: 30px;
+  }
 }
 
 #hero-buttons {
@@ -94,6 +131,13 @@ header #navbar .nav-links {
   grid-gap: 30px;
 }
 
+@media only screen and (max-width: 450px) {
+  #hero-buttons {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
 .hero-btn {
   border: #034748 solid 5px;
   padding: 20px 70px;
@@ -101,7 +145,7 @@ header #navbar .nav-links {
   background-color: transparent;
   color: white;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 1.5vw;
 }
 
 #About {
@@ -110,6 +154,18 @@ header #navbar .nav-links {
   background-image: linear-gradient(#022F2F, #034748);
   height: 1000px;
   padding: 50px 100px;
+}
+
+@media only screen and (max-width: 1400px) {
+  #About {
+    height: 1700px;
+  }
+}
+
+@media only screen and (max-width: 1400px) and (max-width: 800px) {
+  #About {
+    padding: 50px 10px;
+  }
 }
 
 #About .section-header {
@@ -134,6 +190,20 @@ header #navbar .nav-links {
           justify-content: space-between;
 }
 
+@media only screen and (max-width: 1400px) {
+  #About #about-section-cards {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    gap: 20px;
+  }
+}
+
 #About .about-card {
   text-align: center;
   background-color: #001021;
@@ -156,22 +226,26 @@ header #navbar .nav-links {
 }
 
 .about-card-full {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   text-align: center;
   background-color: #001021;
   height: 160px;
-  width: 100%;
   color: white;
   font-size: 16px;
   text-transform: uppercase;
   border-radius: 10px;
   margin-top: 50px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .about-card-full {
+    height: 200px;
+  }
+}
+
+@media only screen and (max-width: 1200px) and (max-width: 800px) {
+  .about-card-full {
+    font-size: 15px;
+  }
 }
 
 .about-card-full-title {
@@ -189,7 +263,14 @@ header #navbar .nav-links {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin-top: 30px;
+  padding: 30px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .about-card-full-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 #Work {
@@ -198,6 +279,19 @@ header #navbar .nav-links {
   background-image: linear-gradient(#034748, #023939);
   height: 1500px;
   padding: 50px 100px;
+}
+
+@media only screen and (max-width: 1200px) {
+  #Work {
+    height: 2500px;
+    padding: 50px 50px;
+  }
+}
+
+@media only screen and (max-width: 1200px) and (max-width: 600px) {
+  #Work {
+    padding: 50px 0px;
+  }
 }
 
 #Work .section-header {
@@ -248,7 +342,7 @@ header #navbar .nav-links {
 
 #Work .work-card-full-title {
   font-weight: bold;
-  font-size: 35px;
+  font-size: 40px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
@@ -328,10 +422,16 @@ header #navbar .nav-links {
   gap: 35px 100px;
 }
 
+@media only screen and (max-width: 1200px) {
+  #Work .work-card-container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
 #Work .work-card {
   background-color: #001021;
   height: 260px;
-  width: 100%;
   color: white;
   border-radius: 10px;
   text-transform: uppercase;
@@ -352,7 +452,7 @@ header #navbar .nav-links {
 
 #Work .work-card .work-card-title {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 22px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
@@ -362,12 +462,18 @@ header #navbar .nav-links {
 
 #Work .work-card .work-card-desc {
   font-size: 12px;
-  width: 400px;
+  width: 25em;
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-area: 2 / 1 / 3 / 2;
+}
+
+@media only screen and (max-width: 600px) {
+  #Work .work-card .work-card-desc {
+    width: 80%;
+  }
 }
 
 #Work .work-card .work-card-button, #Work .work-card .work-card-button a {
@@ -395,8 +501,15 @@ header #navbar .nav-links {
   text-decoration: none;
 }
 
+@media only screen and (max-width: 600px) {
+  #Work .work-card .work-card-button, #Work .work-card .work-card-button a {
+    width: 50%;
+    height: 75%;
+  }
+}
+
 #Work .work-card .fa-desktop, #Work .work-card .fa-pen, #Work .work-card .fa-envelope {
-  font-size: 80px;
+  font-size: 5vw;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 2;
@@ -409,6 +522,7 @@ header #navbar .nav-links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-style: italic;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #001934;
@@ -416,20 +530,33 @@ header #navbar .nav-links {
   margin: 0px;
 }
 
+@media only screen and (max-width: 600px) {
+  #Work .work-card .work-card-skills {
+    font-size: 10px;
+  }
+}
+
 #Contact {
   background-color: #022F2F;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#023939), to(#001021));
   background-image: linear-gradient(#023939, #001021);
-  height: 700px;
+  height: 800px;
   padding: 50px 100px;
+}
+
+@media only screen and (max-width: 600px) {
+  #Contact {
+    padding: 50px 0px;
+    height: 400px;
+  }
 }
 
 #Contact .section-header {
   font-family: "Monoton", cursive;
   text-align: center;
   font-size: 40px;
-  -webkit-text-decoration: underline  5px white;
-          text-decoration: underline  5px white;
+  -webkit-text-decoration: underline  3px white;
+          text-decoration: underline  3px white;
   text-transform: uppercase;
   text-underline-offset: 10px;
   color: white;
@@ -444,10 +571,10 @@ header #navbar .nav-links {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 20px 400px;
+  margin: 20px 0px;
 }
 
-#Contact .contact-btn-list .contact-btn {
+#Contact .contact-btn {
   padding: 25px;
   margin: 10px;
   display: -ms-grid;
@@ -460,7 +587,7 @@ header #navbar .nav-links {
   text-transform: uppercase;
   background-color: #034748;
   color: white;
-  font-size: 30px;
+  font-size: 3vw;
   font-weight: bold;
   text-align: center;
   border-radius: 10px;
@@ -468,13 +595,13 @@ header #navbar .nav-links {
   border: none;
 }
 
-#Contact .contact-btn-list .fa-envelope-open-text, #Contact .contact-btn-list .fa-linkedin, #Contact .contact-btn-list .fa-github {
-  font-size: 40px;
+#Contact .fa-envelope-open-text, #Contact .fa-linkedin, #Contact .fa-github {
+  font-size: 3vw;
 }
 
 #footer {
   background-color: #001021;
-  height: 150px;
+  height: 250px;
   color: white;
   font-family: "Monoton", cursive;
   display: -webkit-box;
@@ -486,7 +613,7 @@ header #navbar .nav-links {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 30px;
+  font-size: 3vw;
   text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
