--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 /* Color Varibles */
 $primary-color-blue : #001021;
 $primary-color-blue-light : #001934;
@@ -35,6 +38,7 @@ header {
     #logo {
         font-weight: 900;
         display: flex;
+        font-size: 1rem;
     }
 
     #navbar {
@@ -43,10 +47,18 @@ header {
         font-family: $paragraph-font;
         list-style-type: none;
         margin-right: 15px;
+        @media only screen and (max-width: 500px) {
+            font-size: 12px;
+            margin: 0px;
+           
+        }
     
         .nav-links {
             display: inline-block;
             padding-right: 20px;
+            @media only screen and (max-width: 600px) {
+                padding: 0px;
+            }
         }
         
     }
@@ -61,20 +73,34 @@ header {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    align-items: center;
+    text-align: center;
+    align-items: center; 
+    @media only screen and (max-width: 800px) {
+        height: 900px;
+    }          
     }
     #hero-header-text {
-        font-family: $header-font;
+        font-family: 'Monoton';
         font-size: 80px;
         color: white;
         letter-spacing: 6%;
         text-transform: uppercase;
         margin-bottom: 50px;
+        @media only screen and (max-width: 900px) {
+            font-size: 50px;
+            @media only screen and (max-width: 400px) {
+                font-size: 30px;
+            }
+       }
     }
     #hero-buttons {
       display: grid;  
       grid-template-columns: 1fr 1fr;
       grid-gap: 30px;
+      @media only screen and (max-width: 450px) {
+        grid-template-columns: 1fr;
+    }
+
     }
         .hero-btn {
             border: $secondary-color-green-lightest solid 5px;
@@ -83,13 +109,22 @@ header {
             background-color: transparent;
             color: white;
             text-transform: uppercase;
-            font-size: 20px;
+            font-size: 1.5vw;
+    
         }
     #About {
         background-color: $secondary-color-green;
         background-image: linear-gradient($secondary-color-green, $secondary-color-green-lightest);
         height: 1000px;
         padding: 50px 100px;
+        @media only screen and (max-width: 1400px) {
+            height: 1700px;
+            @media only screen and (max-width: 800px) {
+                padding: 50px 10px;
+            }
+
+
+        }
         
         .section-header {
             font-family: $header-font;
@@ -106,9 +141,15 @@ header {
             display: grid;
             grid-template-columns: 450px 450px 450px;
             justify-content: space-between;
+                @media only screen and (max-width: 1400px) {
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    justify-content: space-around;
+                    grid-template-rows: 1fr;
+                    gap: 20px;
+             }
         }
         .about-card {
-            
             text-align: center;
             background-color: $primary-color-blue;
             height: 300px;
@@ -116,6 +157,7 @@ header {
             font-size: 16px;
             text-transform: uppercase;
             border-radius: 10px;
+
         }   
                 .about-card-title {
                     
@@ -130,17 +172,21 @@ header {
                     
             }
     }       .about-card-full {
-            display: flex;
-            flex-direction: column;
             text-align: center;
             background-color: $primary-color-blue;
             height: 160px;
-            width: 100%;
             color: white;
             font-size: 16px;
             text-transform: uppercase;
             border-radius: 10px;
             margin-top: 50px;
+            @media only screen and (max-width: 1200px) {
+                height: 200px;
+                @media only screen and (max-width: 800px) {
+                        font-size: 15px;
+                }
+            }
+                
 
         }       
                 .about-card-full-title {
@@ -155,7 +201,10 @@ header {
                     list-style-type: none;
                     display: flex;
                     justify-content: space-around;
-                    margin-top: 30px;
+                    padding: 30px;
+                    @media only screen and (max-width: 1200px) {
+                        flex-wrap: wrap;
+                    }
                 }
 
 
@@ -166,6 +215,15 @@ header {
         background-image: linear-gradient($secondary-color-green-lightest, $secondary-color-green-light);
         height: 1500px;
         padding: 50px 100px;
+        @media only screen and (max-width: 1200px) {
+                    height: 2500px;
+                    padding: 50px 50px;
+                    @media only screen and (max-width: 600px) {
+                        padding: 50px 0px;
+                        
+                
+                    }
+        }
 
     .section-header {
         font-family: $header-font;
@@ -205,7 +263,7 @@ header {
 
         .work-card-full-title {
             font-weight: bold;
-            font-size: 35px;
+            font-size: 40px;
             grid-area: 1 / 1 / 2 / 2;
             order: 1;
             padding-left: 30px;
@@ -251,15 +309,18 @@ header {
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr 1fr;
             gap: 35px 100px;
+            @media only screen and (max-width: 1200px) {
+                    grid-template-columns: 1fr;
+            }
         }
         .work-card {
             background-color: $primary-color-blue;
             height: 260px;
-            width: 100%;
             color: white;
             border-radius: 10px;
             text-transform: uppercase;
             overflow: hidden;
+            
         
                 .work-card-body {
                     display: grid;
@@ -268,18 +329,23 @@ header {
                     grid-column-gap: 0px;
                     grid-row-gap: 0px;
                     padding: 40px;
+
                                         
                 }
                 .work-card-title {
                     font-weight: bold;
-                    font-size: 20px;
+                    font-size: 22px;
                     grid-area: 1 / 1 / 2 / 2;
+
                     
                 }
                 .work-card-desc {
                     font-size: 12px;
-                    width: 400px;
+                    width: 25em;
                     grid-area: 2 / 1 / 3 / 2;
+                    @media only screen and (max-width: 600px) {
+                        width: 80%;
+                    }
 
                 }
                 .work-card-button, .work-card-button a {
@@ -295,37 +361,53 @@ header {
                     height: 50px;
                     grid-area: 3 / 1 / 4 / 2;
                     text-decoration: none;
+                    @media only screen and (max-width: 600px) {
+                        width: 50%;
+                        height: 75%;
+                
+                    }
+                    
                     
                 }
-                .fa-desktop, .fa-pen, .fa-envelope,  {
-                    font-size: 80px;
+                .fa-desktop, .fa-pen, .fa-envelope {
+                    font-size: 5vw;
                     grid-area: 1 / 2 / 2 / 3;
+                    
                     
                 }
                 .work-card-skills {
                     list-style-type: none;
                     display: flex;
+                    font-style: italic;
                     justify-content: space-around;
                     background-color: $primary-color-blue-light;
                     padding: 10px;
                     margin: 0px;
+                    @media only screen and (max-width: 600px) {
+                        font-size: 10px;
+                
+                    }
                     
                 }
                     
-            }       
+        }     
 
 }
  #Contact {
     background-color: $secondary-color-green;
     background-image: linear-gradient($secondary-color-green-light, $primary-color-blue);
-    height: 700px;
+    height: 800px;
     padding: 50px 100px;
-
+        @media only screen and (max-width: 600px) {
+            padding: 50px 0px;
+            height: 400px;
+    
+        }
     .section-header {
         font-family: $header-font;
         text-align: center;
         font-size: 40px;
-        text-decoration: underline  5px white;
+        text-decoration: underline  3px white;
         text-transform: uppercase;
         text-underline-offset: 10px;
         color: white;
@@ -334,7 +416,9 @@ header {
     .contact-btn-list {
         display: flex;
         flex-direction: column;
-        margin: 20px 400px;
+        margin: 20px 0px;
+
+        }
 
         .contact-btn {
             padding: 25px;
@@ -345,29 +429,29 @@ header {
             text-transform: uppercase;
             background-color: $secondary-color-green-lightest;
             color: white;
-            font-size: 30px;
+            font-size: 3vw;
             font-weight: bold;
             text-align: center;
             border-radius: 10px;
             text-decoration: none;
             border: none;
-            
+
         } .fa-envelope-open-text, .fa-linkedin, .fa-github {
-            font-size: 40px;
+            font-size: 3vw;
+            
         }
     }
 
 
- }
 
  #footer {
      background-color: $primary-color-blue;
-     height: 150px;
+     height: 250px;
      color: white;
      font-family: $header-font;
      display: flex;
      justify-content: center;
      align-items: center;
-     font-size: 30px;
+     font-size: 3vw;
      text-align: center;
  }
