--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -39,6 +39,24 @@ header {
         font-weight: 900;
         display: flex;
         font-size: 1rem;
+        
+    }
+    .toggle-button {
+        position: absolute;
+        top: .75rem;
+        right: 1rem;
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 30px;
+        height: 21px;
+    } .toggle-button .bar {
+        height: 3px;
+        width: 100%;
+        background-color: white;
+        border-radius: 10px;
+
+        }    
     }
 
     #navbar {
@@ -50,19 +68,17 @@ header {
         @media only screen and (max-width: 500px) {
             font-size: 12px;
             margin: 0px;
-           
+        }
+        .toggle-button {
+            display: flex;
         }
     
         .nav-links {
             display: inline-block;
             padding-right: 20px;
-            @media only screen and (max-width: 600px) {
-                padding: 0px;
-            }
         }
         
     }
-}
 
 
     #hero-section {
@@ -76,8 +92,8 @@ header {
     text-align: center;
     align-items: center; 
     @media only screen and (max-width: 800px) {
-        height: 900px;
-    }          
+        height: 800px;
+        }          
     }
     #hero-header-text {
         font-family: 'Monoton';
@@ -110,6 +126,10 @@ header {
             color: white;
             text-transform: uppercase;
             font-size: 1.5vw;
+            @media only screen and (max-width: 450px) {
+                font-size: 15px;
+            }
+        
     
         }
     #About {
@@ -215,11 +235,11 @@ header {
         background-image: linear-gradient($secondary-color-green-lightest, $secondary-color-green-light);
         height: 1500px;
         padding: 50px 100px;
-        @media only screen and (max-width: 1200px) {
+        @media only screen and (max-width: 1250px) {
                     height: 2500px;
                     padding: 50px 50px;
                     @media only screen and (max-width: 600px) {
-                        padding: 50px 0px;
+                        padding: 50px 10px;
                         
                 
                     }
@@ -243,6 +263,10 @@ header {
         height: 310px;
         width: auto;
         overflow: hidden;
+        @media only screen and (max-width: 450px) {
+            height: 400px;
+            
+        }
        
     }
         .work-card-full-body {
@@ -251,32 +275,68 @@ header {
             grid-template-rows: 70px 85px 55px 60px 40px;
             grid-column-gap: 0px;
             grid-row-gap: 0px;
-           
+            @media only screen and (max-width: 450px) {
+                
+            }
+        
 
         }
         .work-card-full-img {
             height: 20px;
-            width: auto;
             grid-area: 2 / 2 / span 3 / 3;
             order: 4;
+            @media only screen and (max-width: 450px) {
+               grid-area: 1 / 1 / 2 / 3;
+               display: flex;
+               
+               justify-content: center;
+            }
+        
+            
         }
 
         .work-card-full-title {
             font-weight: bold;
-            font-size: 40px;
+            font-size: 30px;
             grid-area: 1 / 1 / 2 / 2;
             order: 1;
             padding-left: 30px;
             padding-top: 50px;
+            @media only screen and (max-width: 750px) {
+                font-size: 20px;
+                @media only screen and (max-width: 450px) {
+                    font-size: 15px;
+                    margin-top: 170px;
+                }
+            
+            }
+        
         }
         .work-card-full-desc {
-            font-size: 25px;
+            font-size: 18px;
             grid-area: 2 / 1 / 3 / 2;
             order: 2;
             padding-left: 30px;
             padding-top: 30px;
-            width: 800px;
-            line-height: 30px;
+            width: 80%;
+            line-height: 25px;
+            @media only screen and (max-width: 1040px) {
+                font-size: 15px;
+                width: 100%;
+                line-height: 25px;
+                @media only screen and (max-width: 735px) {
+                    font-size: 12px;
+                    line-height: 15px;
+                    @media only screen and (max-width: 450px) {
+                        font-size: 10px;
+                        margin-top: 150px;
+                        width: 100%;
+                    }
+                
+                }
+            
+            }
+        
             
         }
         .work-card-full-btn {
@@ -290,7 +350,20 @@ header {
             grid-area: 3 / 1 / 4 / 2;
             order: 3;
             width: 250px;
+            @media only screen and (max-width: 950px) {
+                padding: 15px 20px;
+                width: 200px;
+                @media only screen and (max-width: 450px) {
+                    font-size: 15px;
+                    padding: 20px 0px;
+                    font-size: 10px;
+                    width: 180px;
+                    margin-top: 150px;
+                    
+                }
             
+            }
+         
         }
         .work-card-full-skills {
             list-style-type: none;
@@ -303,13 +376,24 @@ header {
             grid-area: 5 / 1 / 6 / 3;
             order: 5;
             padding: 10px;
+            @media only screen and (max-width: 950px) {
+                font-size: 15px;
+                @media only screen and (max-width: 450px) {
+                    font-size: 10px;
+                    padding: 20px;
+                    margin-top: 90px;
+                }
+            
+                
+            }
+        
         }
         .work-card-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr 1fr;
             gap: 35px 100px;
-            @media only screen and (max-width: 1200px) {
+            @media only screen and (max-width: 1250px) {
                     grid-template-columns: 1fr;
             }
         }
@@ -320,6 +404,9 @@ header {
             border-radius: 10px;
             text-transform: uppercase;
             overflow: hidden;
+            @media only screen and (max-width: 450px) {
+                height: 230px;
+            }
             
         
                 .work-card-body {
@@ -329,13 +416,24 @@ header {
                     grid-column-gap: 0px;
                     grid-row-gap: 0px;
                     padding: 40px;
-
+                    @media only screen and (max-width: 700px) {
+                        padding: 20px;
+                    }
+                
                                         
                 }
                 .work-card-title {
                     font-weight: bold;
-                    font-size: 22px;
+                    font-size: 20px;
                     grid-area: 1 / 1 / 2 / 2;
+                    @media only screen and (max-width: 630px) {
+                        font-size: 15px;
+                        @media only screen and (max-width: 3840px) {
+                            font-size: 12px;
+                        }
+                    
+                    }
+                
 
                     
                 }
@@ -345,6 +443,9 @@ header {
                     grid-area: 2 / 1 / 3 / 2;
                     @media only screen and (max-width: 600px) {
                         width: 80%;
+                        @media only screen and (max-width: 450px) {
+                            width: 90%;
+                        }
                     }
 
                 }
@@ -364,14 +465,23 @@ header {
                     @media only screen and (max-width: 600px) {
                         width: 50%;
                         height: 75%;
-                
+                        @media only screen and (max-width: 550px) {
+                            font-size: 10px;
+                            margin-top: 20px;
+                        }
+                    
                     }
                     
                     
                 }
                 .fa-desktop, .fa-pen, .fa-envelope {
-                    font-size: 5vw;
+                    font-size: 60px;
                     grid-area: 1 / 2 / 2 / 3;
+                    @media only screen and (max-width: 730px) {
+                        font-size: 40px;
+                        padding-top: 10px;
+                    }
+                
                     
                     
                 }
@@ -383,9 +493,13 @@ header {
                     background-color: $primary-color-blue-light;
                     padding: 10px;
                     margin: 0px;
-                    @media only screen and (max-width: 600px) {
-                        font-size: 10px;
-                
+                    @media only screen and (max-width: 700px) {
+                        font-size: 12px;
+                        margin-top: 50px;
+                        @media only screen and (max-width: 450px) {
+                            margin-top: 20px;
+                            
+                        }
                     }
                     
                 }
@@ -429,7 +543,7 @@ header {
             text-transform: uppercase;
             background-color: $secondary-color-green-lightest;
             color: white;
-            font-size: 3vw;
+            font-size: 2.5vw;
             font-weight: bold;
             text-align: center;
             border-radius: 10px;
