--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -21,61 +21,96 @@ $paragraph-font: 'Raleway', sans-serif;
 
 body {
     font-family: $paragraph-font;
+    margin: 0;
+    padding: 0;
 }
-header {
-    background-color: $primary-color-blue;
-    padding: 15px;
-    text-transform: uppercase;
-    font-family: $paragraph-font;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 
-    a:visited,  a:link {
-        text-decoration: none;
-        color: white;
-    }
-    #logo {
-        font-weight: 900;
+    .navbar {
         display: flex;
-        font-size: 1rem;
-        
-    }
-    .toggle-button {
-        position: absolute;
-        top: .75rem;
-        right: 1rem;
-        display: none;
-        flex-direction: column;
+        position: relative;
         justify-content: space-between;
-        width: 30px;
-        height: 21px;
-    } .toggle-button .bar {
-        height: 3px;
-        width: 100%;
-        background-color: white;
-        border-radius: 10px;
-
-        }    
-    }
-
-    #navbar {
-        display: flex;
-        text-decoration: none;
+        align-items: center;
+        background-color: $primary-color-blue;
+        color: white;
         font-family: $paragraph-font;
-        list-style-type: none;
-        margin-right: 15px;
-        @media only screen and (max-width: 500px) {
-            font-size: 12px;
-            margin: 0px;
+            @media (max-width: 550px) {
+                flex-direction: column;
+                align-items: flex-start;
+        }
+        .brand-title {
+            font-weight: 900; 
+            color: white;
+            text-transform: uppercase;
+            font-size: 1.5rem;
+            margin: .5rem;
         }
         .toggle-button {
-            display: flex;
+            position: absolute;
+            top: .75rem;
+            right: 1rem;
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 30px;
+            height: 21px;
+                @media (max-width: 550px) {
+                    display: flex;
+                }
+    
+        } 
+        .toggle-button .bar {
+            height: 3px;
+            width: 100%;
+            background-color: white;
+            border-radius: 10px;
+    
+            }
+
+        .nav-links {
+            height: 100%;
+            @media (max-width: 550px) {
+                display: none;
+                width: 100%;
+            }
+        }
+        .nav-links li {
+            list-style-type: none;
+            @media (max-width: 550px){
+                text-align: center;
+            }
+        }
+        .nav-links li a {
+            display: block;
+            text-decoration: none;
+            color: white;
+            padding: 1rem;
+            @media (max-width: 550px) {
+                padding: .5rem 1rem;
+            }
+        }
+        .nav-links li:hover {
+            background-color: $primary-color-blue-light;
         }
     
-        .nav-links {
-            display: inline-block;
-            padding-right: 20px;
+        .nav-links ul {
+            display: flex;
+            margin: 0;
+            padding: 0;
+            @media (max-width: 550px) {
+               flex-direction: column;
+               width: 100%;
+            }
+            .nav-links ul li {
+                @media (max-width: 550px){
+                    text-align: center;
+                }
+            }
+    
+        }
+        .nav-links.active {
+            @media (max-width: 550px){
+                display: flex;
+            }
         }
         
     }
@@ -99,7 +134,7 @@ header {
         font-family: 'Monoton';
         font-size: 80px;
         color: white;
-        letter-spacing: 6%;
+        letter-spacing: 6px;
         text-transform: uppercase;
         margin-bottom: 50px;
         @media only screen and (max-width: 900px) {
@@ -115,6 +150,10 @@ header {
       grid-gap: 30px;
       @media only screen and (max-width: 450px) {
         grid-template-columns: 1fr;
+    } 
+    a:visited,  a:link {
+        text-decoration: none;
+        color: white;
     }
 
     }
