--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -379,13 +379,14 @@ body {
             
         }
         .work-card-full-btn {
-            font-weight: bold;
+            font-family: $paragraph-font;
             padding: 15px 30px;
             margin: 5px;
             text-transform: uppercase;
             border: none;
             margin-left: 30px;
             border-radius: 20px;
+            font-size: 15px;
             background-color: $primary-color-blue-dark;
             color: white;
             grid-area: 3 / 1 / 4 / 2;
@@ -500,6 +501,7 @@ body {
                     color: white;
                     width: 250px;
                     height: 50px;
+                    font-size: 14px;
                     grid-area: 3 / 1 / 4 / 2;
                     text-decoration: none;
                     @media only screen and (max-width: 600px) {
